# nba-propcast

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml  railway.json
backend/app/: config.py  db.py
backend/app/routers/: backtest.py  players.py  predict.py
backend/tests/: test_api.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useDebounce.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Backtest.tsx  Predict.tsx
ml-pipeline/: pyproject.toml
ml-pipeline/data/: backtest_results.json
ml-pipeline/data/models/: ast.joblib  ast_residuals.npy  fg3m.joblib  fg3m_residuals.npy  metrics.json  pts.joblib  pts_residuals.npy  reb.joblib  reb_residuals.npy
ml-pipeline/data/processed/: features.parquet
ml-pipeline/src/propcast/: __init__.py
ml-pipeline/src/propcast/backtest/: __init__.py  metrics.py  run.py
ml-pipeline/src/propcast/features/: __init__.py  _rolling.py  build.py
ml-pipeline/src/propcast/ingest/: __init__.py  dk_scraper.py  historical.py  live.py  nba_client.py  run.py  schema.py  smoke_test.py
ml-pipeline/src/propcast/models/: __init__.py  _cv.py  predict.py  train.py
ml-pipeline/tests/: test_backtest.py  test_features.py  test_ingest.py  test_models.py
