[project]
name = "propcast-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
