[project]
name = "propcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rkrani", email = "rkrani@scu.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "nba-api>=1.11.4",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
