[project]
name = "propcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ralrocks", email = "rahulrani03@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "nba-api>=1.11.4",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
